# Fracttalix

./: # Fracttalix: A Lightweight Open-Source Toolbox for Monofractal and Entropy Analysis of Univariate Time Series with Built-in Surrogate Validation  .gitignore  .zenodo.json  11 Axioms  11 Axioms of the Fractal Rhythm Model with Mathematical Expressions  11 axioms Mathematical Formulations  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ClosedLoop Governance Corrected.docx  Constructing a High-True-Yield, Category-Agnostic IPS: A Step-by-Step Framework for Sustainable Income Compounding  Exploratory Application of Fracttalix Metrics to Heart Rate Variability Data from PhysioNet Databases  Exploratory Evaluation of Fracttalix Metrics on Synthetic Bubble Data and Empirical Financial Series  Exploratory Fractal and Rhythmic Metrics for Complex Time Series: A Heuristic Toolbox  Final Mathematical Formulations of the 11 Axioms  First code  First paper  Fractal Rhythm Companion Paper.odt  Fracttalix 9.0.txt.txt  Fracttalix Sentinel V 9.0  Fracttalix Sentinel v2.6.5 — Adaptive early detection with regime awareness  Fracttalix V. 2.5.docx  Fracttalix V2.6.1 py  Fracttalix V2.6.2 py  Fracttalix V2.6.4  Fracttalix v 2.6.5 "Sentinel" technical report  Fracttalix v2.5.py  Fracttalix v2.6.3 py  Fracttalix v2.6.4: A Lightweight Open-Source Toolbox for Exploratory Fractal and Entropy Metrics in Time Series Analysis  J.O.S.S. paper (pre-print)  LICENSE  MK-P4-ClosedLoopGovernance-DRS.docx  MetaKaizen Complete Trilogy Corrected.docx  MetaKaizen Complete Trilogy.docx  MetaKaizen Corrected.docx  MetaKaizen GeneralTheory.docx  MetaKaizen Paper1 GeneralTheory v5.docx  (+36 more)
.checkpoint/: PROTOCOL.md  checkpoint-schema.json
.comms/: _state.json  relay-to-grok-S58.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
Legal Notice/: Disclaimer
ai-layers/: DRP1-ai-layer.json  DRP2-ai-layer.json  DRP3-ai-layer.json  DRP4-ai-layer.json  DRP5-ai-layer.json  DRP8-ai-layer.json  DRS-ARCH-ai-layer.json  MK-P1-ai-layer.json  MK-P2-ai-layer.json  MK-P3-ai-layer.json  MK-P4-ai-layer.json  MK-P5-ai-layer.json  MK-P6-ai-layer.json  MK-P7-ai-layer.json  MK-P8-ai-layer.json  P1-ai-layer.json  P10-ai-layer.json  P11-ai-layer.json  P12-ai-layer.json  P2-ai-layer.json  P3-ai-layer.json  P4-ai-layer.json  P5-ai-layer.json  P6-ai-layer.json  P7-ai-layer.json  P8-ai-layer.json  P9-ai-layer.json  SFW1-ai-layer-v2.json  SFW1-ai-layer.json  TEAM-STRUCTURE-RESEARCH.md  TEAM-ai-layer.json  ai-layer-schema.json  claim-registry-index.md  falsification-kernel.md  process-graph.json
benchmark/: __init__.py  ablation.py  archetypes.py  comparison.py  diagnose_physics_vs_software.py  frm_physics_validation.py  frm_suite_sandbox.py  investigate_fpr_s47.py  lambda_v2_vs_ews_real.py  lambda_vs_ews.py  metrics.py  monte_carlo_lambda.py  realworld_ews_analysis.py  validate_frm_confidence.py  validate_frm_real_data.py  validate_lambda_real_data.py
collab/: from-lambda-branch.md  from-sentinel-branch.md  thread.md
data/: p4_validation_results.json
docs/: ARCH2-pass-forward-register.md  CBP-practical-guide.md  DESIGN-FRMSuite-CBT.md  DESIGN-v13-frm-native.md  DESIGN-v14-frm-suite.md  FRM_SeriesBuildTable_v1.5.md  GVP-spec.md  claude-bootstrap.md  dependency_graph.md  detector_suite.md  drs-mp.md  frm_suite.md  getting_started.md  handoff-S44.md  index.md  mkdocs.yml  propagation-strategy.md  state_schema.md  three_channel_model.md
drs_mp/: __init__.py  __main__.py  core.py  pyproject.toml
examples/: 00_quickstart.ipynb  01_basic_streaming.py  02_multistream.py  03_collapse_detection.py  04_autotune.py  05_getting_started.ipynb  basic_detection.py  drs_mp_example.py  multi_stream.py  three_channel_monitoring.py
fracttalix/: __init__.py  __main__.py  _compat.py  _utils.py  config.py  detector.py  multistream.py  types.py  window.py
guides/: README.md  ar.json  ar.md  bn.json  bn.md  de.json  de.md  en.json  en.md  es.json  es.md  fr.json  fr.md  hi.json  hi.md  id.json  id.md  ja.json  ja.md  ko.json  ko.md  pt.json  pt.md  ru.json  ru.md  zh.json  zh.md
journal/: ARCH-S50-PATCH-001.md  CBP-paper-build-process.md  CorpusArch-S48-S49-amendments.md  DRP1-v1.1-UMP-patch-spec.md  DRP2-v1.2-prose-read-S54.md  DRP3-D3-0.0-IR-audit-results.md  DRP3-D3-1.0-claim-identification.md  DRP3-D3-2.0-derivation-table.md  DRP3-D3-3.0-falsification-predicates.md  DRP3-prose-v1.md  DRP4-D4-build-S56.md  DRP4-prose-v1.md  DRP5-D5-0.0-IR-precheck-S57.md  DRP5-D5-build-S57.md  DRP5-HR-D5-S57.md  DRP5-MK-CLOSE-S57.md  DRP5-MK-OPEN-S57.md  DRP5-MK2-S57.md  DRP5-final-build-S57.md  DRP5-prose-v1.md  DRS-Architecture-build-process.md  MK-P6-build-process.md  P1-ai-layer-v12-text.md  P2-ai-layer-v4-text.md  P2-build-process.md  P3-ai-layer-v2-text.md  P4-build-process.md  WO-S49-PUSH-1.md  confirmation-events-S36-S39.json  journal_index.md  session_36_complete.md  session_36_notes.md  session_36_theoretical_advance.md  session_43_notes.md  session_44_notes.md  session_48_notes.md  session_49_notes.md  session_50_notes.md  session_51_notes.md  session_52_notes.md  (+3 more)
legacy/: README.md  fracttalix_sentinel_v1100.py  fracttalix_sentinel_v710.py  fracttalix_sentinel_v76.py  fracttalix_sentinel_v79.py
legal/: DISCLAIMER.md
network/: .gitignore  DDN-theory.md  SETUP-CHECKLIST.md  __init__.py  distributed_docs.py  health_monitor.py  manifest.json
outputs/: FRM_SeriesBuildTable_v1.2.md
(+396 files in other folders)
